--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,12 @@ LANGCHAIN_CALLBACKS_BACKGROUND=false
 
 # Turn on demo mode
 # NEXT_PUBLIC_DEMO="true"
+# Required for Supabase connection (used in lib/supabaseClient.ts)
+NEXT_PUBLIC_SUPABASE_URL="YOUR_SUPABASE_URL"
+NEXT_PUBLIC_SUPABASE_ANON_KEY="YOUR_SUPABASE_ANON_KEY" # Public anon key for client-side operations
+SUPABASE_SERVICE_ROLE_KEY="YOUR_SUPABASE_SERVICE_ROLE_KEY" # Use Service Role Key for backend operations
+
+# Required for WhatsApp Webhook and API (used in app/api/webhook/route.ts)
+WHATSAPP_VERIFY_TOKEN="YOUR_WHATSAPP_VERIFY_TOKEN" # Token to verify webhook setup with Meta
+WHATSAPP_API_TOKEN="YOUR_WHATSAPP_API_TOKEN" # Token for sending messages via WhatsApp Business API
+WHATSAPP_PHONE_NUMBER_ID="YOUR_WHATSAPP_PHONE_NUMBER_ID" # ID of the phone number registered with Meta
