--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "langchain-nextjs-template",
-  "version": "0.0.0",
+  "name": "tdxwaagent",
+  "version": "0.1.0",
   "private": true,
   "packageManager": "yarn@3.5.1",
   "scripts": {
@@ -8,7 +8,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write \"app\""
+    "format": "prettier --write \"app\"",
+    "setup-db": "node scripts/setup_database.js",
+    "webhook": "ngrok http 3000"
   },
   "engines": {
     "node": ">=18"
@@ -19,12 +21,19 @@
     "@langchain/langgraph": "^0.2.57",
     "@langchain/langgraph-sdk": "^0.0.60",
     "@langchain/openai": "^0.4.9",
+    "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
+    "lucide-react": "^0.363.0",
+    "next": "14.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "recharts": "^2.12.2",
+    "sonner": "^1.4.3",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.1",
-    "@supabase/supabase-js": "^2.32.0",
-    "@types/node": "20.12.12",
+    "@supabase/supabase-js": "^2.49.4",
     "@types/react": "18.3.2",
     "@types/react-dom": "18.3.0",
     "ai": "^3.1.12",
@@ -48,6 +57,7 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.4.19",
+    "@types/node": "^22.15.3",
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
