--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,31 @@
 nodeLinker: node-modules
 
+plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
+    spec: "@yarnpkg/plugin-workspace-tools"
+
 yarnPath: .yarn/releases/yarn-3.5.1.cjs
+
+enableGlobalCache: false
+
+logFilters:
+  - code: YN0002
+    level: discard
+  - code: YN0060
+    level: discard
+  - code: YN0061
+    level: discard
+  - code: YN0028
+    level: discard
+
+npmPublishAccess: public
+
+npmRegistryServer: "https://registry.npmjs.org"
+
+packageExtensions:
+  "@langchain/community@*":
+    peerDependencies:
+      "@browserbasehq/stagehand": "*"
+      "@ibm-cloud/watsonx-ai": "*"
+      "ibm-cloud-sdk-core": "*"
+      "openai": "*"
