--- a/package.json
+++ b/package.json
@@ -10,25 +10,21 @@
     "lint": "next lint",
     "format": "prettier --write \"app\"",
     "setup-db": "node scripts/setup_database.js",
-    "webhook": "ngrok http 3000"
+    "webhook": "ngrok http 3000",
+    "update-lockfile": "node scripts/update-lockfile.js",
+    "postinstall": "node -e \"try { require('fs').accessSync('./node_modules/.bin/next', require('fs').constants.X_OK) } catch (e) { process.exit(0) }\""
   },
   "engines": {
     "node": ">=18"
   },
   "dependencies": {
+    "@browserbasehq/stagehand": "^1.0.0",
+    "@ibm-cloud/watsonx-ai": "^0.2.0",
     "@langchain/community": "^0.3.37",
     "@langchain/core": "^0.3.43",
     "@langchain/langgraph": "^0.2.57",
     "@langchain/langgraph-sdk": "^0.0.60",
     "@langchain/openai": "^0.4.9",
-    "date-fns": "^3.6.0",
-    "dotenv": "^16.4.5",
-    "lucide-react": "^0.363.0",
-    "next": "14.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "recharts": "^2.12.2",
-    "sonner": "^1.4.3",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-popover": "^1.1.4",
@@ -39,14 +35,19 @@
     "ai": "^3.1.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
+    "ibm-cloud-sdk-core": "^4.0.8",
     "langchain": "^0.3.19",
     "lucide-react": "^0.473.0",
     "next": "^15.2.4",
     "next-themes": "^0.4.4",
     "nuqs": "^2.3.2",
+    "openai": "^4.28.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.12.2",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
@@ -56,14 +57,14 @@
     "zod-to-json-schema": "^3.23.2"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^13.4.19",
+    "@next/bundle-analyzer": "^15.2.4",
     "@types/node": "^22.15.3",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
-    "postcss": "8.4.27",
+    "autoprefixer": "^10.4.18",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^15.2.4",
+    "postcss": "^8.4.35",
     "prettier": "^3.4.2",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.4.5"
   }
 }
