--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,13 +1,13 @@
 nodeLinker: node-modules
-
-plugins:
-  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
-    spec: "@yarnpkg/plugin-workspace-tools"
-
-yarnPath: .yarn/releases/yarn-3.5.1.cjs
-
 enableGlobalCache: false
 
+npmRegistryServer: "https://registry.npmjs.org"
+
+# Permitir modificaciones al archivo de bloqueo durante la instalación
+immutablePatterns: []
+enableImmutableInstalls: false
+
+# Ignorar advertencias de dependencias peer
 logFilters:
   - code: YN0002
     level: discard
@@ -15,17 +15,3 @@ logFilters:
     level: discard
   - code: YN0061
     level: discard
-  - code: YN0028
-    level: discard
-
-npmPublishAccess: public
-
-npmRegistryServer: "https://registry.npmjs.org"
-
-packageExtensions:
-  "@langchain/community@*":
-    peerDependencies:
-      "@browserbasehq/stagehand": "*"
-      "@ibm-cloud/watsonx-ai": "*"
-      "ibm-cloud-sdk-core": "*"
-      "openai": "*"
